books-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oneclick-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:3000"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET"
spec:
  rules:
    - host: oneclick.k8s.io
    - http:
        paths:
          - pathType: Prefix
            path: /books
            backend:
              service:
                name: books-service
                port:
                  number: 8081
          - pathType: Prefix
            path: /publishers
            backend:
              service:
                name: publishers-service
                port:
                  number: 8082
